--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -13,6 +13,7 @@ jobs:
       uses: ammaraskar/sphinx-action@master
       with:
         doc-folder: "docs/"
+        build-command: make dirhtml
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
       with:
